@@ -1,5 +1,5 @@
 DIST eiskaltdc-1.0.0.tar.bz2 1931695 RMD160 41d90cab9f0b9e1a949d427f7d3a308c153d6727 SHA1 2c2de2ef3b3bd230ddfaa9f9118a01988c75fdae SHA256 dc8d264832a14eb76140ca5626dd5eadbae74542b8ec5f68a1b149f773e60ec9
-EBUILD eiskaltdc-1.0.0.ebuild 980 RMD160 6997d4c8bb81f8c61765328c76cbcce93b5112ab SHA1 80bb32b42bd9ca43b7842c4c18dc1191fcbc9dfe SHA256 540516fff05793242e1db2641feb589073d8542934e1c68325b88e821684a065
-EBUILD eiskaltdc-9999.ebuild 976 RMD160 3928a8303512778b824dc5bd6729d0c1d4d265ba SHA1 7191ff6b38b2f85806dbab86610b7ce4ec4a8d97 SHA256 66c0ec6662352c87c62bd409b3a951e6257c8dc3c8b80072b6c7b89ef0263a31
+EBUILD eiskaltdc-1.0.0.ebuild 690 RMD160 1cf6f90843cfe158f02a9cc4b2bee8a302014bd1 SHA1 90c6960e13afd77734dd54c726efb3ab85338bf0 SHA256 5e2b4201639166f721ea8d1ccb65402efddb27cae835abeb1712a5371ac5aec4
+EBUILD eiskaltdc-9999.ebuild 757 RMD160 f732b99ad360c569853f5aa4e24ab6caf6864fc8 SHA1 4d9b28be6168690da83cb7ebc2e1628823e5049d SHA256 ac3c7c6d385cf41031dc4a51e82543caeb361f51efb4f58c914f10c1dda99e7c
 MISC ChangeLog 295 RMD160 751aa983940cfdd95fe873e4d85336d8a501994b SHA1 1e238423837797aef6c9208265e415dc733f2214 SHA256 d45667fb569bd253b107a30d98f5cfe577d6ca4fecc4a5852fe211c0ccc6db2e
 MISC metadata.xml 247 RMD160 d9dbc213793413ee971eb2153aeb87a23ab9ee5b SHA1 20912308b3b6a48acf1ebc34de61a9ff1caba154 SHA256 dee352934f95e5b33d8cec04b9d1fa5e321fa2f82bd6792fd0015db46b2417d6
